rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1218_1995_IN-CS-1-Codes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1218_1995_IN-CS-1-Codes.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'
LinkerError in ASN grammar: Failed to link value with 'Code'


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs_1_codes {
    extern crate alloc;
    use super::in_cs_1_errors::{
        CANCELLED, CANCEL_FAILED, E_TCFAILED, IMPROPER_CALLER_RESPONSE, MISSING_CUSTOMER_RECORD,
        MISSING_PARAMETER, PARAMETER_OUT_OF_RANGE, REQUESTED_INFO_ERROR, SYSTEM_FAILURE,
        TASK_REFUSED, UNAVAILABLE_RESOURCE, UNEXPECTED_COMPONENT_SEQUENCE, UNEXPECTED_DATA_VALUE,
        UNEXPECTED_PARAMETER, UNKNOWN_LEG_ID, UNKNOWN_RESOURCE,
    };
    use super::in_cs_1_operations::{
        ACTIVATE_SERVICE_FILTERING, ACTIVITY_TEST, ANALYSED_INFORMATION, ANALYSE_INFORMATION,
        APPLY_CHARGING, APPLY_CHARGING_REPORT, ASSIST_REQUEST_INSTRUCTIONS, CALL_GAP,
        CALL_INFORMATION_REPORT, CALL_INFORMATION_REQUEST, CANCEL, CANCEL_STATUS_REPORT_REQUEST,
        COLLECTED_INFORMATION, COLLECT_INFORMATION, CONNECT, CONNECT_TO_RESOURCE,
        DISCONNECT_FORWARD_CONNECTION, ESTABLISH_TEMPORARY_CONNECTION, EVENT_NOTIFICATION_CHARGING,
        EVENT_REPORT_BCSM, FURNISH_CHARGING_INFORMATION, HOLD_CALL_IN_NETWORK, INITIAL_DP,
        INITIATE_CALL_ATTEMPT, ORIGINATION_ATTEMPT_AUTHORIZED, O_ANSWER, O_CALLED_PARTY_BUSY,
        O_DISCONNECT, O_MID_CALL, O_NO_ANSWER, PLAY_ANNOUNCEMENT,
        PROMPT_AND_COLLECT_USER_INFORMATION, RELEASE_CALL, REQUEST_CURRENT_STATUS_REPORT,
        REQUEST_EVERY_STATUS_CHANGE_REPORT, REQUEST_FIRST_STATUS_MATCH_REPORT,
        REQUEST_NOTIFICATION_CHARGING_EVENT, REQUEST_REPORT_BCSMEVENT, RESET_TIMER,
        ROUTE_SELECT_FAILURE, R_CONTINUE, SELECT_FACILITY, SELECT_ROUTE, SEND_CHARGING_INFORMATION,
        SERVICE_FILTERING_RESPONSE, SPECIALIZED_RESOURCE_REPORT, STATUS_REPORT,
        TERM_ATTEMPT_AUTHORIZED, T_ANSWER, T_BUSY, T_DISCONNECT, T_MID_CALL, T_NO_ANSWER,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    pub static ERR_CANCEL_FAILED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(1))));
    #[doc = " ERROR codes"]
    pub static ERR_CANCELLED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(0))));
    pub static ERR_E_TCFAILED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(3))));
    pub static ERR_IMPROPER_CALLER_RESPONSE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(4))));
    pub static ERR_MISSING_CUSTOMER_RECORD: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(6))));
    pub static ERR_MISSING_PARAMETER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(7))));
    pub static ERR_PARAMETER_OUT_OF_RANGE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(8))));
    pub static ERR_REQUESTED_INFO_ERROR: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(10))));
    pub static ERR_SYSTEM_FAILURE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(11))));
    pub static ERR_TASK_REFUSED: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(12))));
    pub static ERR_UNAVAILABLE_RESOURCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(13))));
    pub static ERR_UNEXPECTED_COMPONENT_SEQUENCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(14))));
    pub static ERR_UNEXPECTED_DATA_VALUE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(15))));
    pub static ERR_UNEXPECTED_PARAMETER: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(16))));
    pub static ERR_UNKNOWN_LEG_ID: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(17))));
    pub static ERR_UNKNOWN_RESOURCE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(18))));
    #[doc = " Service management package"]
    pub static OP_ACTIVATE_SERVICE_FILTERING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(42))));
    #[doc = " Activity Test package"]
    pub static OP_ACTIVITY_TEST: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(55))));
    pub static OP_ANALYSE_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(28))));
    pub static OP_ANALYSED_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(3))));
    #[doc = " Charging package"]
    pub static OP_APPLY_CHARGING: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(35))));
    pub static OP_APPLY_CHARGING_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(36))));
    #[doc = " SCF/SRF activation of assist package"]
    pub static OP_ASSIST_REQUEST_INSTRUCTIONS: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(16))));
    #[doc = " Traffic management package"]
    pub static OP_CALL_GAP: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(41))));
    #[doc = " Call report package"]
    pub static OP_CALL_INFORMATION_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(44))));
    pub static OP_CALL_INFORMATION_REQUEST: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(45))));
    #[doc = " Cancel package"]
    pub static OP_CANCEL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(53))));
    pub static OP_CANCEL_STATUS_REPORT_REQUEST: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(54))));
    #[doc = " SSF call processing package"]
    pub static OP_COLLECT_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(27))));
    pub static OP_COLLECTED_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(2))));
    #[doc = " Connect package (elementary SSF function)"]
    pub static OP_CONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(20))));
    #[doc = " Non-assisted connection establishment package"]
    pub static OP_CONNECT_TO_RESOURCE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(19))));
    pub static OP_CONTINUE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(31))));
    #[doc = " Generic disconnect resource package"]
    pub static OP_DISCONNECT_FORWARD_CONNECTION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(18))));
    #[doc = " Assist connection establishment package"]
    pub static OP_ESTABLISH_TEMPORARY_CONNECTION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(17))));
    pub static OP_EVENT_NOTIFICATION_CHARGING: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(26))));
    pub static OP_EVENT_REPORT_BCSM: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(24))));
    #[doc = " Billing package"]
    pub static OP_FURNISH_CHARGING_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(34))));
    #[doc = " Call handling package (elementary SSF function)"]
    pub static OP_HOLD_CALL_IN_NETWORK: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(21))));
    #[doc = " the operations are grouped by the identified operation package"]
    #[doc = " SCF activation package"]
    pub static OP_INITIAL_DP: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(0))));
    #[doc = " SCF call initiation package"]
    pub static OP_INITIATE_CALL_ATTEMPT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(32))));
    pub static OP_O_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(7))));
    pub static OP_O_CALLED_PARTY_BUSY: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(5))));
    pub static OP_O_DISCONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(8))));
    #[doc = " Advanced BCP DP package"]
    pub static OP_O_MID_CALL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(14))));
    pub static OP_O_NO_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(6))));
    #[doc = " Basic BCP DP package"]
    pub static OP_ORIGINATION_ATTEMPT_AUTHORIZED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(1))));
    #[doc = " Specialized resource control package"]
    pub static OP_PLAY_ANNOUNCEMENT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(47))));
    pub static OP_PROMPT_AND_COLLECT_USER_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(48))));
    pub static OP_RELEASE_CALL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(22))));
    #[doc = " Status reporting package"]
    pub static OP_REQUEST_CURRENT_STATUS_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(37))));
    pub static OP_REQUEST_EVERY_STATUS_CHANGE_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(38))));
    pub static OP_REQUEST_FIRST_STATUS_MATCH_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(39))));
    #[doc = " Charging Event handling package"]
    pub static OP_REQUEST_NOTIFICATION_CHARGING_EVENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(25))));
    #[doc = " BCSM Event handling package"]
    pub static OP_REQUEST_REPORT_BCSMEVENT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(23))));
    #[doc = " Timer package"]
    pub static OP_RESET_TIMER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(33))));
    pub static OP_ROUTE_SELECT_FAILURE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(4))));
    pub static OP_SELECT_FACILITY: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(30))));
    pub static OP_SELECT_ROUTE: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(29))));
    #[doc = " Signalling control package"]
    pub static OP_SEND_CHARGING_INFORMATION: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(46))));
    pub static OP_SERVICE_FILTERING_RESPONSE: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(43))));
    pub static OP_SPECIALIZED_RESOURCE_REPORT: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(49))));
    pub static OP_STATUS_REPORT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(40))));
    pub static OP_T_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(12))));
    pub static OP_T_BUSY: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(10))));
    pub static OP_T_DISCONNECT: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(13))));
    pub static OP_T_MID_CALL: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(15))));
    pub static OP_T_NO_ANSWER: LazyLock<Code> = LazyLock::new(|| Code(Code(Code::local(11))));
    pub static OP_TERM_ATTEMPT_AUTHORIZED: LazyLock<Code> =
        LazyLock::new(|| Code(Code(Code::local(9))));
}
