rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1218_1995_IN-CS-1-Errors-appendix.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1218_1995_IN-CS-1-Errors-appendix.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs_1_errors_appendix {
    extern crate alloc;
    use super::in_cs_1_codes_appendix::{
        ERR_DATAUNAVAILABLE, ERR_DATA_ALREADY_EXISTS, ERR_LEG_IDALREADY_ASSIGNED, ERR_TOO_LATE,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
