rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1218_1995_IN-CS-1-Errors.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1218_1995_IN-CS-1-Errors.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs_1_errors {
    extern crate alloc;
    use super::in_cs_1_codes::{
        ERR_CANCELLED, ERR_CANCEL_FAILED, ERR_E_TCFAILED, ERR_IMPROPER_CALLER_RESPONSE,
        ERR_MISSING_CUSTOMER_RECORD, ERR_MISSING_PARAMETER, ERR_PARAMETER_OUT_OF_RANGE,
        ERR_REQUESTED_INFO_ERROR, ERR_SYSTEM_FAILURE, ERR_TASK_REFUSED, ERR_UNAVAILABLE_RESOURCE,
        ERR_UNEXPECTED_COMPONENT_SEQUENCE, ERR_UNEXPECTED_DATA_VALUE, ERR_UNEXPECTED_PARAMETER,
        ERR_UNKNOWN_LEG_ID, ERR_UNKNOWN_RESOURCE,
    };
    use super::in_cs_1_datatypes::{InvokeID, UnavailableNetworkResource};
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
