rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1218_1995_IN-CS-1-Operations-appendix.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1218_1995_IN-CS-1-Operations-appendix.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs_1_operations_appendix {
    extern crate alloc;
    use super::in_cs_1_codes_appendix::{
        OP_ADD_PARTY, OP_ATTACH, OP_CHANGE_PARTIES, OP_DETACH, OP_HOLD_CALL_PARTY_CONNECTION,
        OP_RECONNECT, OP_RELEASE_CALL_PARTY_CONNECTION,
    };
    use super::in_cs_1_data_types_appendix::{
        AddPartyArg, AttachArg, CallPartyHandlingResultsArg, ChangePartiesArg, DetachArg,
        HoldCallPartyConnectionArg, ReconnectArg, ReleaseCallPartyConnectionArg,
    };
    use super::in_cs_1_errors::{
        MISSING_PARAMETER, SYSTEM_FAILURE, TASK_REFUSED, UNEXPECTED_COMPONENT_SEQUENCE,
        UNEXPECTED_DATA_VALUE, UNEXPECTED_PARAMETER, UNKNOWN_LEG_ID, UNKNOWN_RESOURCE,
    };
    use super::in_cs_1_errors_appendix::{
        DATA_ALREADY_EXISTS, DATA_UNAVAILABLE, LEG_IDALREADY_ASSIGNED, TOO_LATE,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
