rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1218_1995_IN-CS-1-Operations.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1218_1995_IN-CS-1-Operations.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs_1_operations {
    extern crate alloc;
    use super::in_cs_1_codes::{
        OP_ACTIVATE_SERVICE_FILTERING, OP_ACTIVITY_TEST, OP_ANALYSED_INFORMATION,
        OP_ANALYSE_INFORMATION, OP_APPLY_CHARGING, OP_APPLY_CHARGING_REPORT,
        OP_ASSIST_REQUEST_INSTRUCTIONS, OP_CALL_GAP, OP_CALL_INFORMATION_REPORT,
        OP_CALL_INFORMATION_REQUEST, OP_CANCEL, OP_CANCEL_STATUS_REPORT_REQUEST,
        OP_COLLECTED_INFORMATION, OP_COLLECT_INFORMATION, OP_CONNECT, OP_CONNECT_TO_RESOURCE,
        OP_CONTINUE, OP_DISCONNECT_FORWARD_CONNECTION, OP_ESTABLISH_TEMPORARY_CONNECTION,
        OP_EVENT_NOTIFICATION_CHARGING, OP_EVENT_REPORT_BCSM, OP_FURNISH_CHARGING_INFORMATION,
        OP_HOLD_CALL_IN_NETWORK, OP_INITIAL_DP, OP_INITIATE_CALL_ATTEMPT,
        OP_ORIGINATION_ATTEMPT_AUTHORIZED, OP_O_ANSWER, OP_O_CALLED_PARTY_BUSY, OP_O_DISCONNECT,
        OP_O_MID_CALL, OP_O_NO_ANSWER, OP_PLAY_ANNOUNCEMENT,
        OP_PROMPT_AND_COLLECT_USER_INFORMATION, OP_RELEASE_CALL, OP_REQUEST_CURRENT_STATUS_REPORT,
        OP_REQUEST_EVERY_STATUS_CHANGE_REPORT, OP_REQUEST_FIRST_STATUS_MATCH_REPORT,
        OP_REQUEST_NOTIFICATION_CHARGING_EVENT, OP_REQUEST_REPORT_BCSMEVENT, OP_RESET_TIMER,
        OP_ROUTE_SELECT_FAILURE, OP_SELECT_FACILITY, OP_SELECT_ROUTE, OP_SEND_CHARGING_INFORMATION,
        OP_SERVICE_FILTERING_RESPONSE, OP_SPECIALIZED_RESOURCE_REPORT, OP_STATUS_REPORT,
        OP_TERM_ATTEMPT_AUTHORIZED, OP_T_ANSWER, OP_T_BUSY, OP_T_DISCONNECT, OP_T_MID_CALL,
        OP_T_NO_ANSWER,
    };
    use super::in_cs_1_datatypes::{
        ActivateServiceFilteringArg, AnalyseInformationArg, AnalysedInformationArg,
        ApplyChargingArg, ApplyChargingReportArg, AssistRequestInstructionsArg, CallGapArg,
        CallInformationReportArg, CallInformationRequestArg, CancelArg,
        CancelStatusReportRequestArg, CollectInformationArg, CollectedInformationArg, ConnectArg,
        ConnectToResourceArg, EstablishTemporaryConnectionArg, EventNotificationChargingArg,
        EventReportBCSMArg, FurnishChargingInformationArg, HoldCallInNetworkArg, InitialDPArg,
        InitiateCallAttemptArg, MidCallArg, OAnswerArg, OCalledPartyBusyArg, ODisconnectArg,
        ONoAnswerArg, OriginationAttemptAuthorizedArg, PlayAnnouncementArg,
        PromptAndCollectUserInformationArg, ReceivedInformationArg, ReleaseCallArg,
        RequestCurrentStatusReportArg, RequestCurrentStatusReportResultArg,
        RequestEveryStatusChangeReportArg, RequestFirstStatusMatchReportArg,
        RequestNotificationChargingEventArg, RequestReportBCSMEventArg, ResetTimerArg,
        RouteSelectFailureArg, SelectFacilityArg, SelectRouteArg, SendChargingInformationArg,
        ServiceFilteringResponseArg, SpecializedResourceReportArg, StatusReportArg, TAnswerArg,
        TBusyArg, TDisconnectArg, TNoAnswerArg, TermAttemptAuthorizedArg,
    };
    use super::in_cs_1_errors::{
        CANCELLED, CANCEL_FAILED, E_TCFAILED, IMPROPER_CALLER_RESPONSE, MISSING_CUSTOMER_RECORD,
        MISSING_PARAMETER, PARAMETER_OUT_OF_RANGE, REQUESTED_INFO_ERROR, SYSTEM_FAILURE,
        TASK_REFUSED, UNAVAILABLE_RESOURCE, UNEXPECTED_COMPONENT_SEQUENCE, UNEXPECTED_DATA_VALUE,
        UNEXPECTED_PARAMETER, UNKNOWN_LEG_ID, UNKNOWN_RESOURCE,
    };
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
