rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1218_1995_INDirectoryAccessProtocol.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1218_1995_INDirectoryAccessProtocol.asn1
---
Warnings:
LinkerError in ASN grammar: Failed to resolve supertype Bind of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to resolve reference in object set.
LinkerError in ASN grammar: Failed to resolve supertype TCMessage of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod indirectory_access_protocol {
    extern crate alloc;
    use super::dialogue_pdus::DIALOGUE_AS_ID;
    use super::directory_abstract_service::{
        ADD_ENTRY, DIRECTORY_BIND, DIRECTORY_UNBIND, MODIFY_ENTRY, REMOVE_ENTRY, SEARCH,
    };
    use super::remote_operations_generic_ros_pdus::{Bind, InvokeId, Unbind};
    use super::remote_operations_information_objects::*;
    use super::sdfprotocol_object_identifiers::{
        ID_AC_DIRECTORY_ACCESS_AC, ID_AS_DIRECTORY_BINDING_AS, ID_AS_DIRECTORY_OPERATIONS_AS,
        ID_CONTRACT_DAP, ID_PACKAGE_DAP_CONNECTION, ID_PACKAGE_MODIFY, ID_PACKAGE_SEARCH,
        ID_ROS_OBJECT_DAP_DSA, ID_ROS_OBJECT_DIRECTORY, ID_ROS_OBJECT_DUA,
    };
    use super::tc_notation_extensions::*;
    use super::tcapmessages::TCMessage;
    use super::useful_definitions::DIRECTORY_ABSTRACT_SERVICE;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "BasicDAP-PDUs")]
    pub struct BasicDAPPDUs(pub TCMessage);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, identifier = "DAPBinding-PDUs")]
    pub enum DAPBindingPDUs {
        #[rasn(value("0.."))]
        bind(Bind),
        #[rasn(value("0.."))]
        unbind(Unbind),
    }
}
