rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1228_1997_IN-CS2-SCF-CUSF-ops-args.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1228_1997_IN-CS2-SCF-CUSF-ops-args.asn1
---
Warnings:
NotYetInplemented in ASN grammar: Value references of path length > 2 are not yet supported! Found reference bound.&.numOfExtensions
LinkerError in ASN grammar: Failed to resolve reference of ElsewhereDefined: Message
NotYetInplemented in ASN grammar: Value references of path length > 2 are not yet supported! Found reference bound.&.numOfBCUSMEvents
LinkerError in ASN grammar: Failed to interpret object identifier value as sequence value!
LinkerError in ASN grammar: Failed to resolve supertype Cause of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype CalledPartyNumber of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype CallUnrelatedDpSpecificCommonParameters of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype CallUnrelatedDpSpecificCommonParameters of parameterized implementation.
LinkerError in ASN grammar: Failed to resolve supertype CallUnrelatedDpSpecificCommonParameters of parameterized implementation.


Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod in_cs2_scf_cusf_ops_args {
    extern crate alloc;
    use super::in_cs2_classes::*;
    use super::in_cs2_datatypes::{
        BCUSMEvent, CallUnrelatedDpSpecificCommonParameters, CalledPartyNumber, Cause, Component,
        ComponentCorrelationID, ComponentType, Duration, ExtensionField, Message, OperationCode,
    };
    use super::in_cs2_errortypes::{
        MISSING_CUSTOMER_RECORD, MISSING_PARAMETER, PARAMETER_OUT_OF_RANGE, SYSTEM_FAILURE,
        TASK_REFUSED, UNEXPECTED_COMPONENT_SEQUENCE, UNEXPECTED_DATA_VALUE, UNEXPECTED_PARAMETER,
    };
    use super::in_cs2_object_identifiers::{
        CLASSES, DATATYPES, ERRORTYPES, OPERATIONCODES, ROS_INFORMATION_OBJECTS,
    };
    use super::in_cs2_operationcodes::{
        OPCODE_ACTIVATION_RECEIVED_AND_AUTHORIZED, OPCODE_ASSOCIATION_RELEASE_REQUESTED,
        OPCODE_COMPONENT_RECEIVED, OPCODE_INITIATE_ASSOCIATION, OPCODE_RELEASE_ASSOCIATION,
        OPCODE_REQUEST_REPORT_BCUSMEVENT, OPCODE_SEND_COMPONENT,
    };
    use super::in_cs2_ssf_scf_ops_args::ACTIVITY_TEST;
    use super::remote_operations_information_objects::*;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
}
