rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1228_1997_IN-CS2-SCF-CUSF-pkgs-contracts-acs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1228_1997_IN-CS2-SCF-CUSF-pkgs-contracts-acs.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 77, column 2]
    │
    │ 
 77 │  scf-cusf-contract CONTRACT ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 78 │    CONNECTION             emptyConnectionPackage
 79 │    INITIATOR CONSUMER OF
 80 │      {basic-scf-cusf-package{networkSpecificBoundSet} | activityTestPackage}
 81 │    ID                     id-contract-cusf-scf
 82 │  }
 84 │  -- basic cusf-scf package
    │
────╯
