rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1228_1997_IN-CS2-SCF-SCF-ops-args.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1228_1997_IN-CS2-SCF-SCF-ops-args.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 102, column 6]
     │
     │ 
 102 │      {[0]  SEQUENCE {userCredit          [0]  UserCredit{bound} OPTIONAL, ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 103 │                      chargingParameters  [1]  ChargingParameters{bound} OPTIONAL,
 104 │                      reportExpected      [2]  BOOLEAN DEFAULT TRUE,
 105 │                      securityParameters  [3]  SecurityParameters OPTIONAL,
 106 │                      extensions
 107 │                        [4]  SEQUENCE SIZE (1..bound.&numOfExtensions) OF
 108 │                               ExtensionField{{SupportedExtensions  {bound}}}
 109 │                          OPTIONAL,
 110 │                      ...}, scfqop.&scfArgumentQOP}
     │
─────╯
