rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_q_q1228_1997_IN-CS2-SCF-SCF-pkgs-contracts-acs.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_q_q1228_1997_IN-CS2-SCF-SCF-pkgs-contracts-acs.asn1
---
Error matching ASN syntax at while parsing:
     ╭─[line 123, column 2]
     │
     │ 
 122 │  -- Contracts
 123 │  scf-scfContract CONTRACT ::= { ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 124 │    CONNECTION             scf-scfConnectionPackage {networkSpecificBoundSet}
 125 │    INITIATOR CONSUMER OF
 126 │      {activityTestPackage | handlingInformationPackage{networkSpecificBoundSet}}
 127 │    RESPONDER CONSUMER OF
 128 │      {activityTestPackage | chargingInformationPackage{networkSpecificBoundSet}
 129 │        | networkCapabilityPackage{networkSpecificBoundSet} |
 130 │        notificationPackage{networkSpecificBoundSet} |
 131 │        userInformationPackage{networkSpecificBoundSet}}
 132 │    ID                     id-contract-scf-scf
 133 │  }
     │
─────╯
